Fixed centered button text issue on mobile

--- a/maincss.css
+++ b/maincss.css
@@ -54,6 +54,7 @@ body{
     font-size: 16px;
     font-style: bold;
     line-height: 42px;
+    text-align: center;
 }
 
 .demoCTA:hover{
@@ -74,6 +75,25 @@ body{
         margin: 0 auto;
         text-align: left;
        }
+
+       .demoCTA{
+        display: block;
+        width: 100px;
+        height: 40px;
+        margin: 40px auto;
+        background-color: var(--black);
+        border-radius: 6px;
+        color: var(--white);
+        text-decoration: none;
+        font-size: 16px;
+        font-style: bold;
+        line-height: 42px;
+        text-align: center;
+    }
+    
+    .demoCTA:hover{
+        opacity: 0.9;
+    }
  }
 
 
